--- a/src/sample/screen_interfaces/theory.fxml
+++ b/src/sample/screen_interfaces/theory.fxml
@@ -1,30 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<GridPane fx:id="gridPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controllers.TheoryController">
-    <columnConstraints>
-        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-    </columnConstraints>
-    <rowConstraints>
-        <RowConstraints maxHeight="194.4" minHeight="10.0" prefHeight="26.39999618530274" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="387.4000028610229" minHeight="10.0" prefHeight="374.40000381469724" vgrow="SOMETIMES" />
-
-    </rowConstraints>
+<VBox fx:id="vBox" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.controllers.TheoryController">
     <children>
-        <MenuBar fx:id="menuBar" GridPane.columnIndex="0" GridPane.rowIndex="0">
+        <MenuBar fx:id="menuBar">
             <Menu fx:id="menuModels" text="Модели">
-                <MenuItem fx:id="greenbergItem" text="Модели Гринберга" />
+                <MenuItem fx:id="greenbergItem" onAction="#switchToGreenbergModelsChart" text="Модели Гринберга" />
             </Menu>
             <Menu fx:id="menuTheory" text="Теория">
                 <MenuItem fx:id="greenbergTheory" text="Модели Гринберга" />
             </Menu>
-            <Menu fx:id="menuExamples" text="Примеры" />
+            <Menu fx:id="menuExamples" text="Примеры">
+                <MenuItem onAction="#switchToExamples" text="Пример 1" />
+            </Menu>
             <Menu fx:id="menuLanguage" text="Язык">
-                <MenuItem fx:id="rusLangItem" text="Русский" />
-                <MenuItem fx:id="enLangItem" text="Английский" />
+                <MenuItem fx:id="rusLangItem" onAction="#changeToRus" text="Русский" />
+                <MenuItem fx:id="enLangItem" onAction="#changeToEng" text="Английский" />
             </Menu>
         </MenuBar>
+      <ScrollPane fx:id="scrollPane" prefHeight="400.0" prefWidth="200.0">
+            <ImageView fx:id="image" fitHeight="336.0" fitWidth="381.0" pickOnBounds="true" smooth="false">
+               <image>
+                  <Image url="@../tp.jpg" />
+               </image>
+            </ImageView>
+      </ScrollPane>
+
+
     </children>
-</GridPane>
+</VBox>
